docs\README.md에 고찰 내용 추가